# sagemath-mcp

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISTRIBUTION.md  Dockerfile  EVALUATION.md  INSTALLATION.md  LICENSE  MANIFEST.in  MONITORING.md  Makefile  README.md  ROADMAP.md  SECURITY.md  TESTING.md  TODO.md  USAGE.md  docker-compose.yml  pyproject.toml
.githooks/: pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  version-bump.yml
charts/sagemath-mcp/: Chart.yaml  values.yaml
charts/sagemath-mcp/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
docs/: mcp_quickstart.md
docs/reference_md/: genindex.md  index.md  py-modindex.md  search.md
docs/reference_md/algebras/: index.md
docs/reference_md/arithgroup/: index.md
docs/reference_md/arithmetic_curves/: index.md
docs/reference_md/asymptotic/: index.md
docs/reference_md/calculus/: index.md
docs/reference_md/categories/: index.md
docs/reference_md/coding/: index.md
docs/reference_md/coercion/: index.md
docs/reference_md/combinat/: index.md
docs/reference_md/constants/: index.md
docs/reference_md/cpython/: index.md
docs/reference_md/cryptography/: index.md
docs/reference_md/curves/: index.md
docs/reference_md/data_structures/: index.md
docs/reference_md/databases/: index.md
docs/reference_md/diophantine_approximation/: index.md
docs/reference_md/discrete_geometry/: index.md
docs/reference_md/doctest/: index.md
docs/reference_md/documentation/: index.md
docs/reference_md/drinfeld_modules/: index.md
docs/reference_md/dynamics/: index.md
docs/reference_md/euclidean_spaces/: index.md
docs/reference_md/finite_rings/: index.md
docs/reference_md/function_fields/: index.md
docs/reference_md/functions/: index.md
docs/reference_md/game_theory/: index.md
docs/reference_md/games/: index.md
docs/reference_md/graphs/: index.md
docs/reference_md/groups/: index.md
docs/reference_md/hecke/: index.md
docs/reference_md/history_and_license/: index.md
docs/reference_md/homology/: index.md
docs/reference_md/hyperbolic_geometry/: index.md
docs/reference_md/interfaces/: index.md
docs/reference_md/knots/: index.md
docs/reference_md/lfunctions/: index.md
docs/reference_md/libs/: index.md
docs/reference_md/logic/: index.md
docs/reference_md/manifolds/: index.md
docs/reference_md/matrices/: index.md
docs/reference_md/matroids/: index.md
docs/reference_md/misc/: index.md
docs/reference_md/modabvar/: index.md
docs/reference_md/modfrm/: index.md
docs/reference_md/modsym/: index.md
docs/reference_md/modules/: index.md
docs/reference_md/monoids/: index.md
docs/reference_md/noncommutative_polynomial_rings/: index.md
docs/reference_md/number_fields/: index.md
docs/reference_md/numerical/: index.md
docs/reference_md/oremodules/: index.md
docs/reference_md/padics/: index.md
docs/reference_md/parallel/: index.md
docs/reference_md/plot3d/: index.md
docs/reference_md/plotting/: index.md
docs/reference_md/polynomial_rings/: index.md
docs/reference_md/power_series/: index.md
docs/reference_md/probability/: index.md
docs/reference_md/quadratic_forms/: index.md
docs/reference_md/quat_algebras/: index.md
docs/reference_md/quivers/: index.md
docs/reference_md/references/: index.md
docs/reference_md/repl/: index.md
docs/reference_md/resolutions/: index.md
docs/reference_md/riemannian_geometry/: index.md
docs/reference_md/rings/: index.md
docs/reference_md/rings_numerical/: index.md
docs/reference_md/rings_standard/: index.md
docs/reference_md/sat/: index.md
docs/reference_md/schemes/: index.md
docs/reference_md/semirings/: index.md
docs/reference_md/sets/: index.md
docs/reference_md/spkg/: index.md
docs/reference_md/stats/: index.md
docs/reference_md/structure/: index.md
docs/reference_md/tensor_free_modules/: index.md
docs/reference_md/topology/: index.md
docs/reference_md/valuations/: index.md
external_docs/reference_html/doc.sagemath.org/html/en/reference/: genindex.html  index.html  py-modindex.html  search.html
external_docs/reference_html/doc.sagemath.org/html/en/reference/algebras/: index.html
external_docs/reference_html/doc.sagemath.org/html/en/reference/arithgroup/: index.html
scripts/: build_release.py  bump_version.py  convert_html_to_md.py  exercise_mcp.py  run_all_tests.py  run_ci_simulation.sh  setup_sage_container.ps1  setup_sage_container.sh
src/sagemath_mcp/: __init__.py  _sage_worker.py  config.py  models.py  monitoring.py  security.py  server.py  session.py
tests/: conftest.py  test_config.py  test_integration.py  test_math_suite.py  test_sage_worker.py  test_security.py  test_server.py  test_session.py  test_use_cases.py
tests/cli_integration/: cli_config.py  conftest.py  run_cli_tests.py  runner.py  test_cases.py  test_claude.py  test_gemini.py  validate.py
(+76 files in other folders)
