[build-system]
requires = ["hatchling>=1.29"]
build-backend = "hatchling.build"

[project]
name = "sagemath-mcp"
version = "0.3.1"
description = "Model Context Protocol server that provides stateful SageMath computations."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.2.0",
    "pydantic>=2.12.0",
    "anyio>=4.13.0",
]
authors = [
    { name = "XBP Europe" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/XBP-Europe/sagemath-mcp"
Repository = "https://github.com/XBP-Europe/sagemath-mcp"
Issues = "https://github.com/XBP-Europe/sagemath-mcp/issues"
Changelog = "https://github.com/XBP-Europe/sagemath-mcp/releases"

[project.optional-dependencies]
cli = [
    "mcp[cli]>=1.27.0",
]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "coverage>=7.13.0",
    "ruff>=0.15.0",
    "build>=1.4.0",
    "pip-audit>=2.9.0",
]

[project.scripts]
sagemath-mcp = "sagemath_mcp.server:main"

[tool.hatch.build]
packages = ["src/sagemath_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"src/sagemath_mcp/py.typed" = "sagemath_mcp/py.typed"

[tool.hatch.build.targets.sdist]
include = ["src/sagemath_mcp/py.typed"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "UP", "ASYNC", "RUF", "I"]
ignore = ["E203"]

[tool.pytest.ini_options]
addopts = "-ra --ignore=tests/cli_integration"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
filterwarnings = ["ignore::pytest.PytestUnraisableExceptionWarning"]

[tool.coverage.run]
branch = true
source = ["sagemath_mcp"]

[tool.coverage.report]
show_missing = true
skip_covered = true
